@@ -1,3 +1,4 @@
 debian/README.backtrace
 debian/README.multiple-instances
 debian/PACKAGING
+debian/migrate-sites.pl
