@@ -7,8 +7,10 @@ apache2 (2.4.1-4) experimental; urgency=low
   * Fix "dh_apache2 does not set "x" bits on /usr/lib/apache2/modules/"
     Set directory permissions to 755 by default (Closes: #666875). Thanks Axel
     Beckert for the hint.
+  * Add /usr/share/doc/apache2/migrate-sites.pl, a script to assist users to
+    give sites a .conf suffix, add a hint to the NEWS file.
 
- -- Arno Töll <arno@debian.org>  Mon, 02 Apr 2012 10:49:09 +0200
+ -- Arno Töll <arno@debian.org>  Tue, 03 Apr 2012 22:47:47 +0200
 
 apache2 (2.4.1-3) experimental; urgency=low
 
